fix: Route 닫는 태그 추가, StudyCards gap 수정

--- a/src/components/features/study/home/StudyContents.module.scss
+++ b/src/components/features/study/home/StudyContents.module.scss
@@ -96,7 +96,7 @@ body {
 .studyCards {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 12px;
+  gap: 24px;
   justify-items: center;
 }
 
